+Started adding lots of comments *Changed person.jpg

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+  
+  <!--I got bored and got nothing better to do, so I decided to "learn" a bunch of HTML5, CSS, and JS.-->
+  <!--This is my first personal project aside from school. It was a really good learning experience towards front end developing and I feel pretty good about-->
+  <!--I wrote this code from a crash course YouTube video.-->
+  <!--SCSS was also used, so I had to install Sass-->
+  <!--https://www.youtube.com/watch?v=D-h8L5hgW-w-->
+  
+  <!--This is the HTML header-->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -9,13 +17,21 @@
   </head>
 
   <body>
+    <!--Everything else is in the body-->
+
     <div class="navbar">
+      <!--This is the top navigation bar-->
+
       <div class="container">
         <a class="logo" href="#">Nathan<span>Magee</span></a>
+        <!--Website Logo-->
 
         <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="hamburger menu">
+        <!--hamburger menu for mobile and small screens-->
 
         <nav>
+          <!--Everything inside the nav bar, it's all reorganized with css-->
+
           <img id="mobile-exit" class="mobile-menu-exit" src="images/exit.svg" alt="close hamburger">
           
           <ul class="primary-nav">
@@ -28,6 +44,7 @@
           <ul class="secondary-nav">
             <li><a href="#">Contact</a></li>
             <li class="go-premium-cta"><a href="#">Special</a></li>
+            <!--This button has a special class because its the end button and I want it to look different-->
 
           </ul>
 
@@ -38,6 +55,7 @@
     </div>
 
     <section class="hero">
+      <!--Next main part on the page, all the rest are sections-->
       <div class="container">
         <div class="left-col">
           <p class="subhead">What is this?</p>
@@ -108,8 +126,6 @@
       </div>
 
     </section>
-
-
 
     <section class="contact-section">
       <div class="container">
