--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!--hamburger menu for mobile and small screens-->
 
         <nav>
-          <!--Everything inside the nav bar, it's all reorganized with css-->
+          <!--Everything else inside the nav bar, it's all reorganized with css-->
 
           <img id="mobile-exit" class="mobile-menu-exit" src="images/exit.svg" alt="close hamburger">
           
